[gd_scene load_steps=5 format=2]

[ext_resource path="res://Prefabs/Electronics/electronics.png" type="Texture" id=1]
[ext_resource path="res://Prefabs/Electronics/Electronics.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 48.3302

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.53882, 4.04307 )

[node name="Electronics" type="Node2D"]
script = ExtResource( 2 )

[node name="Sounds" type="AudioStreamPlayer2D" parent="."]
bus = "SFX"

[node name="Tween" type="Tween" parent="."]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Magnet" type="Area2D" parent="."]

[node name="MagnetCollision" type="CollisionShape2D" parent="Magnet"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
[connection signal="finished" from="Sounds" to="." method="_on_Sounds_finished"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="body_entered" from="Magnet" to="." method="_on_Magnet_body_entered"]
